div class for logo

--- a/index.html
+++ b/index.html
@@ -13,3 +13,10 @@
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6/css/all.css" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/a95ab3e3ec.js" crossorigin="anonymous"></script>
+    <title>Blog</title>
+  </head>
+  <body>
+    <header>
+        <div class="logo">
+            <h1 class="logo-text"><span>A&K</span>Travel Blog</h1>
+        </div>
