--- a/index.html
+++ b/index.html
@@ -20,3 +20,19 @@
         <div class="logo">
             <h1 class="logo-text"><span>A&K</span>Travel Blog</h1>
         </div>
+        <i class="fa fa-bars menu-toggle"></i>
+        <ul class="navigation">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Blogs</a></li>
+            <!--<li><a href="#">Sign Up</a></li>
+            <li><a href="#">Login</a></li>-->
+            <li>
+                <a href="#"><i class="fa fa-user"></i>User<i class="fa fa-chevron-down" style="font-size: .8em;"></i></a>
+                <ul>
+                    <li><a href="#">Dashboard</a></li>
+                    <li><a href="#" class="logout">Logout</a></li>
+                </ul>
+            </li>
+        </ul>
+    </header>
