--- a/index.html
+++ b/index.html
@@ -121,3 +121,5 @@
               </div>
             </div>
           </div>
+          <div class="footer">
+            <div class="footer-content">
