--- a/index.html
+++ b/index.html
@@ -123,3 +123,10 @@
           </div>
           <div class="footer">
             <div class="footer-content">
+                <div class="footer-section about">
+                    <h1 class="logo-text"><span>A&K</span>Travel Blog</h1>
+                    <p>A&K is a travel blog that serves to provide information aboout travelling destinations around South Africa for a reasonable amount of money</p>
+                    <div class="contact">
+                      <span><i class="fa fa-phone"></i> &nbsp; 012-499-8180</span>
+                      <span><i class="fa fa-envelope"></i> &nbsp; info@aktravel.com</span>
+                    </div>
