--- a/index.html
+++ b/index.html
@@ -130,3 +130,12 @@
                       <span><i class="fa fa-phone"></i> &nbsp; 012-499-8180</span>
                       <span><i class="fa fa-envelope"></i> &nbsp; info@aktravel.com</span>
                     </div>
+                    <div class="socials">
+                        <a href="#"><i class="fab fa-facebook"></i></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></i></a>
+                        <a href="#"><i class="fab fa-linkedin"></i></i></a>
+                        <a href="#"><i class="fab fa-tiktok"></i></i></a>
+                      </div>
+                    </div>
