--- a/index.html
+++ b/index.html
@@ -139,3 +139,12 @@
                         <a href="#"><i class="fab fa-tiktok"></i></i></a>
                       </div>
                     </div>
+                    <div class="footer-section links">
+                        <h2>Quick links</h2><br>
+                        <ul>
+                          <a href="#"><li>Blogs</li></a>
+                          <a href="#"><li>Team</li></a>
+                          <a href="#"><li>Terms and Conditions</li></a>
+              
+                        </ul>
+                      </div>
