--- a/index.html
+++ b/index.html
@@ -148,3 +148,14 @@
               
                         </ul>
                       </div>
+                      <div class="footer-section contact-form">
+                        <h2>Contact Us</h2><br>
+                        <form action="index.html" method="post">
+                          <input type="email" name="email" class="text-input contact-input" placeholder="Enter email address...">
+                          <textarea name="message" class="text-input contact-input" placeholder="Enter message..."></textarea>
+                          <button type="submit" class="btn btn-big">
+                            <i class="fa fa-envelope"></i>Send
+                          </button>
+                        </form>
+                      </div>
+                    </div>
