--- a/index.html
+++ b/index.html
@@ -159,3 +159,9 @@
                         </form>
                       </div>
                     </div>
+                    <div class="footer-bottom">
+                        &copy; A&KTravelling.com | Designed by Asiphile & Karabo
+                      </div>
+                    
+                  </body>
+                </html>
