--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Candal&family=Lato:wght@300;400;700;900&family=Lora&display=swap">
-    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6/css/all.css" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/a95ab3e3ec.js" crossorigin="anonymous"></script>
     <title>Blog</title>
