--- a/index.html
+++ b/index.html
@@ -66,7 +66,23 @@
           </div>
         </div>
       </div>
-      <div class="sidebar"></div>
+      <div class="sidebar">
+        <div class="section search">
+          <h2 class="section search">Search</h2>
+          <form action="index.html" method="post">
+            <input type="text" name="search-term" class="text-input" placeholder="Search..">
+          </form>
+        </div>
+        <div class="section topics">
+          <h2 class="section-title">Topics</h2>
+          <ul>
+            <li><a href="#">Adventure</a></li>
+            <li><a href="#">Nature</a></li>
+            <li><a href="#">Boat Cruise</a></li>
+            <li><a href="#">Luxury</a></li>
+          </ul>
+        </div>
+      </div>
     </div>
     <!---
     <div class="page-wrapper">
