changes to single blog post

--- a/index.html
+++ b/index.html
@@ -115,16 +115,16 @@
                   <h2>Contact Us</h2><br>
                   <form action="index.html" method="post">
                     <input type="email" name="email" class="text-input contact-input" placeholder="Enter email address...">
-                    <textarea name="message" class="text-input contact-input" placeholder="Enter message..."></textarea>
-                    <button type="submit" class="btn btn-big">
+                    <textarea name="message" rows="4" class="text-input contact-input" placeholder="Enter message..."></textarea>
+                    <button type="submit" class="btn btn-big contact-btn">
                       <i class="fa fa-envelope"></i>Send
                     </button>
                   </form>
                 </div>
               </div>
               <div class="footer-bottom">
-                  &copy; A&KTravelling.com | Designed by Asiphile & Karabo
-                </div>
+                &copy; A&KTravelling.com | Designed by Asiphile & Karabo
+              </div>
     <!---
     <div class="page-wrapper">
         <div class="container">
@@ -212,6 +212,6 @@
             </div>
           </div>-->
           
-                    -->
+                
                   </body>
                 </html>
