linking blogs to main html, adjusting color

--- a/blog2.html
+++ b/blog2.html
@@ -86,7 +86,7 @@
 
                 <div class="post clearfix">
                     <img src="images/image_processing20200104-4-1j60xgr.jpg" alt="">
-                    <a href="" class="title"><h4>Kruger National Park</h4></a>
+                    <a href="blog.html" class="title"><h4>Kruger National Park</h4></a>
                 </div>
                 <div class="post clearfix">
                     <img src="images/2a.jpg" alt="">
