--- a/blog.html
+++ b/blog.html
@@ -22,7 +22,7 @@
             </div>
             <i class="fa fa-bars menu-toggle"></i>
             <ul class="navigation">
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Blogs</a></li>
                 <!--<li><a href="#">Sign Up</a></li>
@@ -81,7 +81,7 @@
 
                 <div class="post clearfix">
                     <img src="images/banner_harties90.jpg" alt="">
-                    <a href="" class="title"><h4>Hartbeespoort</h4></a>
+                    <a href="blog2.html" class="title"><h4>Hartbeespoort</h4></a>
                 </div>
                 <div class="post clearfix">
                     <img src="images/2a.jpg" alt="">
